--- a/app/views/unchatbarUser/profile.html
+++ b/app/views/unchatbarUser/profile.html
@@ -1,3 +1,4 @@
-<div data-ng-init="init();" class="navbar-brand">
+<div data-ng-init="init();">
  {{profile.label}}
+    <img ng-src="{{profile.image}}" data-ng-show="profile.image"/>
 </div>
