--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -24,5 +24,10 @@ body {
     outline: none;
     background: white;
     cursor: inherit;
-    display: block;
+
+}
+img.profile-image {
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    border-radius: 100px;
 }
