--- a/app/views/unchatbarUser/profile.html
+++ b/app/views/unchatbarUser/profile.html
@@ -1,4 +1,5 @@
 <div data-ng-init="init();">
  {{profile.label}}
-    <img ng-src="{{profile.image}}" data-ng-show="profile.image"/>
+    <img class="profile-image" ng-src="{{profile.image}}" data-ng-show="profile.image"/>
+
 </div>
