--- a/app/views/unchatbarUser/profile-admin.html
+++ b/app/views/unchatbarUser/profile-admin.html
@@ -20,7 +20,7 @@
         </div>
         <div class="form-group">
             <label for="profileLabel">Name</label>
-            <input type="text" required="true" onchange="handleFileSelect(event)" class="form-control"
+            <input type="text" required="true" class="form-control"
                    id="profileLabel" data-ng-model="profile.label" placeholder="Enter your name">
         </div>
         <div class="form-group">
