--- a/app/views/unchatbarUser/profile-admin.html
+++ b/app/views/unchatbarUser/profile-admin.html
@@ -25,8 +25,13 @@
         </div>
         <div class="form-group">
             <label for="profileLabel">phone-number</label>
-            <input type="text" required="true" readonly="true" onchange="handleFileSelect(event)" class="form-control"
+            <input type="text" required="true" readonly="true" class="form-control"
                    id="profileLabel" data-ng-model="profile.id" placeholder="Enter your name">
+        </div>
+        <div class="form-group">
+            <label for="pass">Password</label>
+            <input type="text" required="true" readonly="true" class="form-control"
+                   id="pass" data-ng-model="pass" placeholder="Enter your password">
         </div>
         <br>
         <hr>
