--- a/app/views/unchatbarUser/profile-admin.html
+++ b/app/views/unchatbarUser/profile-admin.html
@@ -1,40 +1,54 @@
-<div class="col-xs-12 col-sm-9" data-ng-init="init();">
-    <div data-ng-show="profile.id">
-        <div class="form-group">
-            <div class="row">
-                <div class="col-md-2">
-                    <span class="btn btn-file">
-                        <input accept="image/*" type="file" file-model="newImage"/>
-                        <span ng-show="profile.image">
-                            <img class="profile-image" ng-src="{{profile.image}}"/>
-                        </span>
-                    </span>
-                </div>
-                <div class="col-md-10" >
-                    <div class="cropArea" data-ng-if="newImage">
-                        <img-crop  result-image-size="80" result-image-format="image/jpeg" image="newImage"
-                                  result-image="profile.image"></img-crop>
-                    </div>
+<div role="menu" class="un-profile-admin with-arrow" data-ng-init="init();" data-ng-show="profile.id">
+    <div class="menu-header ">
+        <span class="" translate>User settings</span>
+    </div>
+    <div class="divider mar-no"></div>
+    <div class="menu-content">
+        <form class="ng-pristine ng-valid">
+            <div class="form-group">
+                  <div>
+                      <input class="fileUpload" accept="image/*" type="file" file-model="newImage"/>
+                      <img class="img-circle img-user" ng-src="{{profile.image}}"/>
+                  </div>
+                  <div class="cropArea" data-ng-if="newImage">
+                    <img-crop result-image-size="80" result-image-format="image/jpeg" image="newImage"
+                              result-image="profile.image"></img-crop>
                 </div>
             </div>
+            <div class="form-group">
+                <label for="display-name" translate>Display name</label>
+                <input type="text" placeholder="{{'Enter display name' | translate}}" id="display-name"
+                       data-ng-model="profile.label"
+                       class="form-control" required="true">
+
+            </div>
+            <div class="form-group">
+                <label for="user-description" translate>short description</label>
+                <input type="text" data-ng-model="profile.description"
+                       placeholder="{{'a short description' | translate}}"
+                       id="user-description"
+                       class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="user-name" translate>User name</label>
+                <input type="text" data-ng-model="profile.id" id="user-name" class="form-control"
+                       readonly="true">
+            </div>
+            <div class="form-group">
+                <label for="password" translate>Password</label>
+                <input type="text" value="0123456789abcdef" data-ng-model="pass"
+                       id="password" class="form-control" readonly="true">
+            </div>
+        </form>
+    </div>
+    <div class="divider mar-no"></div>
+    <div class="menu-footer">
+        <div>
+            <button class="btn btn-sm btn-success btn-labeled pull-right fa fa-save icon-lg"
+                    data-ng-click="update();newImage='';" translate>
+                Save
+            </button>
         </div>
-        <div class="form-group">
-            <label for="profileLabel">Name</label>
-            <input type="text" required="true" class="form-control"
-                   id="profileLabel" data-ng-model="profile.label" placeholder="Enter your name">
-        </div>
-        <div class="form-group">
-            <label for="profileLabel">phone-number</label>
-            <input type="text" required="true" readonly="true" class="form-control"
-                   id="profileLabel" data-ng-model="profile.id" placeholder="Enter your name">
-        </div>
-        <div class="form-group">
-            <label for="pass">Password</label>
-            <input type="text" required="true" readonly="true" class="form-control"
-                   id="pass" data-ng-model="pass" placeholder="Enter your password">
-        </div>
-        <br>
-        <hr>
-        <button type="submit" data-ng-click="update();newImage='';" class="btn btn-default">Save</button>
     </div>
 </div>
+
