--- a/app/styles/components/_profile-admin.scss
+++ b/app/styles/components/_profile-admin.scss
@@ -1,12 +1,8 @@
 .un-profile-admin {
-  @extend .dropdown-menu, .dropdown-menu-right;
-
-  @media (min-width: $screen-sm-min) {
-    width: 500px;
-  }
-  display: block;
-  position: relative;
+  @extend .page-content, .panel, .panel-default;
+  margin: 20px 0;
   .menu-header {
+    @extend .panel-heading;
     font-weight: 300;
     line-height: 1.25;
   }
@@ -34,6 +30,7 @@
     margin-top: 70px;
   }
   .menu-content {
+    @extend .panel-body;
     padding-left: 15px;
     padding-right: 15px;
     padding-top: 15px;
