--- a/app/views/unchatbarUser/profile.html
+++ b/app/views/unchatbarUser/profile.html
@@ -1,6 +1,6 @@
 <div class="un-profile" data-ng-init="init();">
     <div data-ng-show="profile.id">
-        <span class="hidden-xs text-user">{{profile.id}}</span>
-        <img alt="Profile Picture" data-ng-src="{{profile.image}}" class="img-circle img-user">
+        <span class="text-user">{{profile.id}}</span>
+        <img alt="Profile Picture" data-ng-src="{{profile.image}}">
     </div>
 </div>
