--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,18 +3,9 @@
 // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 @import "components-font-awesome/scss/font-awesome.scss";
-@import "unchatbar-connection/app/styles/main.scss";
+@import "unchatbar-connection/app/styles/_components.scss";
 // endbower
-
-/* Variables
-========================================================================== */
-@import "variables";
-
-/* Layouts
-========================================================================== */
-@import "layout";
 
 /* Components
 ========================================================================== */
-@import "components/profile";
-@import "components/profile-admin";
+@import "components";
